<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="philipp.doorifyapp.CreateActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/create_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:ems="10"
            android:hint="@string/create_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/create_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_name"
            android:ems="10"
            android:hint="@string/create_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/create_passwort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_email"
            android:ems="10"
            android:hint="@string/create_passwort"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/create_w_passwort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_passwort"
            android:ems="10"
            android:hint="@string/create_w_passwort"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/create_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_w_passwort"
            android:ems="10"
            android:hint="@string/create_code"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/create_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/create_code"
            android:layout_marginTop="13dp"
            android:text="@string/create_create" />

        <TextView
            android:id="@+id/create_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_login"
            android:textAlignment="center" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
